crates/hpc-core/tests/compile_fail/api_wouble_wait.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/api_wouble_wait.rs:19:29
   |
19 |     let _illegal = evt.wait(ready);
   |                        ---- ^^^^^ expected `DeviceBuffer<'_, _, InFlight>`, found `DeviceBuffer<'_, u8, Ready>`
   |                        |
   |                        arguments to this method are incorrect
   |
   = note: expected struct `DeviceBuffer<'_, _, InFlight>`
              found struct `DeviceBuffer<'_, u8, hpc_core::Ready>`
note: method defined here
  --> src/api/util/event_token.rs
   |
   |     pub fn wait<T>(
   |            ^^^^
